--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 <body>
 
     <div class="main">
-        <div class="headdiv">
-            <!-- <img id="logo" src="icons8-digger-64.png" alt=""> -->
-            <h1 id="brandname">Chakravarti's Construction</h1>
-            <a target="_blank" id="topexp1" href="https://www.facebook.com/ashu2406"><img src="images/icons8-facebook-50.png"
-                    alt=""></a>
-            <a target="_blank" id="topexp2" href="https://twitter.com/i/flow/login"><img src="images/icons8-twitter-50.png"
-                    alt=""></a>
-            <a target="_blank" id="topexp3" href="https://www.instagram.com/accounts/login/"><img
-                    src="images/icons8-instagram-50.png" alt=""></a>
+        <div class="overlay">
+            <div class="headdiv">
+                <!-- <img id="logo" src="icons8-digger-64.png" alt=""> -->
+                <h1 id="brandname">Chakravarti's Construction</h1>
+                <a target="_blank" id="topexp1" href="https://www.facebook.com/ashu2406"><img
+                        src="images/icons8-facebook-50.png" alt=""></a>
+                <a target="_blank" id="topexp2" href="https://twitter.com/i/flow/login"><img
+                        src="images/icons8-twitter-50.png" alt=""></a>
+                <a target="_blank" id="topexp3" href="https://www.instagram.com/accounts/login/"><img
+                        src="images/icons8-instagram-50.png" alt=""></a>
+            </div>
         </div>
         <div id="div1">
             <div id="div1box">
@@ -66,50 +68,50 @@
                     <button id="submit" type="submit">Submit</button>
                 </form>
             </h1> -->
-            <div id="d4">
-                <h1 id="h4">SIGN UP FOR FULL DETAILS</h1>
-                <form>
-                    <input id="lemailbox" type="text" placeholder="Email">
-                    <button id="sbutton">Suscribe</button>
-                </form>
-            </div>
-            <div id="d5">
-                <h3>Wanderlog</h3>
-                <p>
-                    Blog <br>
-                    Report security issue <br>
-                    Terms of use & Privacy policy <br>
-                    Mobile app <br>
-                    Browser extension <br>
-                    Travel budgeting & cost tracking <br>
-                    How to embed a map on your travel blog <br>
-                    Jobs <br>
-                    Contact us <br>
-                    Google data disclosure</p>
-            </div>
-            <div id="d6">
-                <h3>Guides and resources</h3>
-                <p>
-    
-                    Trip planners by destination
-                    <br> Road trips by destination
-                    <br> Best places to visit by category
-                    <br> Popular search terms by destination
-                    <br> Weather around the world
-                    <br> Travel questions & answers
-                    <br> Travel itinerary guides
-                    <br> Restaurants reservations by destinat<br>ion
-            </div>
-            <div id="d7">
-                <h3>Get the app</h3>
-                <a id="imgapp" href=""><img src="images/icons8-apple-logo-50.png" alt=""></a>
-                <a id="imgapp1" href=""><img src="images/icons8-google-play-50.png" alt=""></a>
-            </div>
-            <div id="d8">
-                <p>Made with ❤ in SF & more <br>
-                    © 2023 Travelchime Inc.</p>
-            </div>
+        <div id="d4">
+            <h1 id="h4">SIGN UP FOR FULL DETAILS</h1>
+            <form>
+                <input id="lemailbox" type="text" placeholder="Email">
+                <button id="sbutton">Suscribe</button>
+            </form>
         </div>
+        <div id="d5">
+            <h3>Wanderlog</h3>
+            <p>
+                Blog <br>
+                Report security issue <br>
+                Terms of use & Privacy policy <br>
+                Mobile app <br>
+                Browser extension <br>
+                Travel budgeting & cost tracking <br>
+                How to embed a map on your travel blog <br>
+                Jobs <br>
+                Contact us <br>
+                Google data disclosure</p>
+        </div>
+        <div id="d6">
+            <h3>Guides and resources</h3>
+            <p>
+
+                Trip planners by destination
+                <br> Road trips by destination
+                <br> Best places to visit by category
+                <br> Popular search terms by destination
+                <br> Weather around the world
+                <br> Travel questions & answers
+                <br> Travel itinerary guides
+                <br> Restaurants reservations by destinat<br>ion
+        </div>
+        <div id="d7">
+            <h3>Get the app</h3>
+            <a id="imgapp" href=""><img src="images/icons8-apple-logo-50.png" alt=""></a>
+            <a id="imgapp1" href=""><img src="images/icons8-google-play-50.png" alt=""></a>
+        </div>
+        <div id="d8">
+            <p>Made with ❤ in SF & more <br>
+                © 2023 Travelchime Inc.</p>
+        </div>
+    </div>
     </div>
 
 </body>
